[gd_scene load_steps=4 format=3 uid="uid://er8cy6hwk03m"]

[ext_resource type="Script" uid="uid://du162d3rcfjvu" path="res://Scripts/player_manager.gd" id="1_snig1"]
[ext_resource type="Script" uid="uid://ck1kshapmox2n" path="res://Scripts/sell_button.gd" id="2_xbfug"]
[ext_resource type="Script" uid="uid://ekgpg2fisb41" path="res://Scripts/player_heart.gd" id="3_q0nfj"]

[node name="PlayerField" type="Node2D"]

[node name="PlayerManager" type="Node2D" parent="."]
script = ExtResource("1_snig1")

[node name="SellButton" type="Button" parent="."]
offset_left = 396.0
offset_top = 191.0
offset_right = 404.0
offset_bottom = 199.0
script = ExtResource("2_xbfug")

[node name="PlayerHeart" type="Node2D" parent="."]
script = ExtResource("3_q0nfj")

[connection signal="pressed" from="SellButton" to="PlayerManager" method="_on_sell_button_pressed"]
